Minor fixes, dark mode v1.2

--- a/src/app/feed/articles-list/articles-list.component.colors.scss
+++ b/src/app/feed/articles-list/articles-list.component.colors.scss
@@ -1,9 +1,8 @@
 @mixin articles-list-component-colors($theme) {
+  .dropdown > p, .no-articles > p {
+    color: map-get($theme, text);
+  }
   .dropdown {
-    p {
-      color: map-get($theme, text);
-    }
-
     select, option {
       background: map-get($theme, input-bg);
       color: map-get($theme, text);
