--- a/src/app/feed/articles-list/articles-list.component.scss
+++ b/src/app/feed/articles-list/articles-list.component.scss
@@ -3,13 +3,13 @@
 .dropdown {
   display: flex;
 
-  p {
-    @include base.text-style;
-    margin: 0 10px 0 0;
-  }
-
   select, option {
     border: none;
     font-size: 16px;
   }
+}
+
+.dropdown > p, .no-articles > p {
+  @include base.text-style;
+  margin: 0 10px 0 0;
 }
